--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
     padding: 0;
     scroll-behavior: smooth;
     scrollbar-width: none;
+    transition: all 0.3s ease;
 }
 
 ::-webkit-scrollbar {
