add blog functionality with BlogPage and BlogSingle components, update routing, and style adjustments

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 body {
     font-family: "Bricolage Grotesque", sans-serif;
     font-weight: 500;
-    color: rgb(16, 4, 28);
+    color: #10041c;
     font-size: 24px;
     line-height: 32px;
     background: linear-gradient(to bottom right, #f3f5f7, #f9f9f9);
